--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-    <form method="" action="">
+    <form method="POST" action="/login">
       <p> Username <input type="text" name="username"></p>
       <p> Password <input type="text" name="password"></p>
       <input type="Submit" value="Log In">
